fix overflow

--- a/src/Teams/Teams.module.css
+++ b/src/Teams/Teams.module.css
@@ -1,7 +1,7 @@
 .codeinput {
   width: 100%;
   text-align: center;
-  margin: 4px;
+  margin: 4px 0 4px 0;
 }
 
 .team {
